--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ table {
 }
 .Introduce-yourself-top{
 	width: 100%;
-	padding: 50px 0px 80px 40px;
+	padding: 120px 0px 120px 40px;
 }
 .Introduce-yourself .right{
 	font-size: 30px;
@@ -95,5 +95,46 @@ table {
 	display: flex;
 	justify-content: space-evenly;
 	flex-wrap: wrap;
+}
+#About{
+	background-color: black;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	padding: 30px 0px 50px 0px;
+}
+.form-right input{
+	height: 40px;
+	margin-bottom: 15px;
+}
+.form-right input:last-child{
+	margin-bottom: 0px;
+}
+.img-left{
+	width: 50%;
+}
+.img-left img{
+	width: 240px;
+	height: 400px;
+	border-radius: 10px;
+}
+.intro li{
+	color: aliceblue;
+	font-size: 20px;
+	margin-bottom: 50px;
+	display: flex;
+}
+.intro li .icon{
+	width: 38px;
+	height: 36px;
+	border: 1px solid red;
+	border-radius: 50%;
+	text-align: center; 
+	margin-right: 10px;
+}
+.intro li .icon i{
+	width: 20px;
+	height: 20px;
+	color: red;
 }
 
